# token-cards

./: README.md  Untitled.ipynb  finding-letters.ipynb  letters.csv  notebook.tex  pyproject.toml  wikipedia_test.ipynb  word_game_letter_distributions.ipynb  yle-words-Copy1.csv
.ipynb_checkpoints/: boggle_slam-checkpoint.txt  finding-letters-checkpoint.ipynb  second_draft-checkpoint.ipynb  wikipedia_test-checkpoint.ipynb  word_game_letter_distributions-checkpoint.ipynb  yle-words-checkpoint.csv
data/: .~my_first_bananagrams.csv  Johnny Gruelle___Raggedy Ann Stories.txt  bananagrams.csv  boggle_slam_counts.csv  desktop.ini  movers.csv  my_first_bananagrams.csv  my_first_bananagrams_split.csv  nltk_stopwords.txt  scrabble.csv  scrabble_jr.csv  stopwords.txt  super_scrabble.csv  upwords_10.csv  words_with_friends.csv
data/.ipynb_checkpoints/: bananagrams-checkpoint.csv  boggle_slam-checkpoint.csv  boggle_slam_cards-checkpoint.csv  boggle_slam_counts-checkpoint.csv  movers-checkpoint.csv  scrabble-checkpoint.csv  stopwords-checkpoint.txt  upwords_10-checkpoint.csv
