[tool.poetry]
name = "token-cards"
version = "0.1.0"
description = ""
authors = ["Christopher Perry <ozbonus@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "3.6"
numpy = "^1.15"
pandas = "^0.23.4"
jupyterlab = "^0.35.4"
seaborn = "^0.9.0"
matplotlib = "^3.0"
nltk = "^3.3"
textstat = "^0.5.2"
wikipedia-api = "^0.3.7"
wikipedia = "^1.4"
bokeh = "^1.0"
sklearn = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
